fixed logo stretching mobile site
pls work this time

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ hr {
 
 .logo {
     size: 50px;
-    max-width: 75%;
-    max-height: 75%;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 .menu, .ourteam {
